// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics|Badge all badges 1`] = `
.emotion-0 {
  display: inline-block;
  vertical-align: top;
  font-size: 11px;
  line-height: 12px;
  padding: 4px 12px;
  border-radius: 3em;
  color: #66BF3C;
  background: #E1FFD4;
}

.emotion-0 svg {
  height: 12px;
  width: 12px;
  margin-right: 4px;
  margin-top: -2px;
}

.emotion-0 svg path {
  fill: #66BF3C;
}

.emotion-1 {
  display: inline-block;
  vertical-align: top;
  font-size: 11px;
  line-height: 12px;
  padding: 4px 12px;
  border-radius: 3em;
  color: #FF4400;
  background: #FEDED2;
}

.emotion-1 svg {
  height: 12px;
  width: 12px;
  margin-right: 4px;
  margin-top: -2px;
}

.emotion-1 svg path {
  fill: #FF4400;
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  font-size: 11px;
  line-height: 12px;
  padding: 4px 12px;
  border-radius: 3em;
  color: #666666;
  background: #EEEEEE;
}

.emotion-2 svg {
  height: 12px;
  width: 12px;
  margin-right: 4px;
  margin-top: -2px;
}

.emotion-2 svg path {
  fill: #666666;
}

<div>
  <div
    class="emotion-0"
  >
    Positive
  </div>
  <div
    class="emotion-1"
  >
    Negative
  </div>
  <div
    class="emotion-2"
  >
    Neutral
  </div>
</div>
`;

exports[`Storyshots Basics|Badge negative 1`] = `
.emotion-0 {
  display: inline-block;
  vertical-align: top;
  font-size: 11px;
  line-height: 12px;
  padding: 4px 12px;
  border-radius: 3em;
  color: #FF4400;
  background: #FEDED2;
}

.emotion-0 svg {
  height: 12px;
  width: 12px;
  margin-right: 4px;
  margin-top: -2px;
}

.emotion-0 svg path {
  fill: #FF4400;
}

<div
  class="emotion-0"
>
  Denied
</div>
`;

exports[`Storyshots Basics|Badge neutral 1`] = `
.emotion-0 {
  display: inline-block;
  vertical-align: top;
  font-size: 11px;
  line-height: 12px;
  padding: 4px 12px;
  border-radius: 3em;
  color: #666666;
  background: #EEEEEE;
}

.emotion-0 svg {
  height: 12px;
  width: 12px;
  margin-right: 4px;
  margin-top: -2px;
}

.emotion-0 svg path {
  fill: #666666;
}

<div
  class="emotion-0"
>
  Neutral
</div>
`;

exports[`Storyshots Basics|Badge positive 1`] = `
.emotion-0 {
  display: inline-block;
  vertical-align: top;
  font-size: 11px;
  line-height: 12px;
  padding: 4px 12px;
  border-radius: 3em;
  color: #66BF3C;
  background: #E1FFD4;
}

.emotion-0 svg {
  height: 12px;
  width: 12px;
  margin-right: 4px;
  margin-top: -2px;
}

.emotion-0 svg path {
  fill: #66BF3C;
}

<div
  class="emotion-0"
>
  Accepted
</div>
`;
